--- a/src/components/SIgnInForm/styles.scss
+++ b/src/components/SIgnInForm/styles.scss
@@ -20,16 +20,24 @@ main {
   }
 
   .error {
-    margin-top: 1rem;
+    margin: 1rem auto 0;
+    width: fit-content;
     padding: 0.5rem;
     border: 1px solid #ef4444;
     border-radius: 5px;
     background-color: #fee2e2;
+    color: #ef4444;
+    font-size: 0.8rem;
+    text-align: center;
   }
 
   label {
     display: block;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
+
+    p {
+      font-size: 0.8rem;
+    }
   }
 
   label input {
@@ -58,6 +66,7 @@ main {
   }
 
   button[disabled] {
-    background-color: #93c5fd;
+    // background-color: #93c5fd;
+    background-color: #988aba;
   }
 }
