--- a/src/components/SIgnInForm/styles.scss
+++ b/src/components/SIgnInForm/styles.scss
@@ -63,6 +63,7 @@ main {
     border: none;
     border-radius: 5px;
     text-transform: uppercase;
+    cursor: pointer;
   }
 
   button[disabled] {
